Single, right aligned, comp fix
Bug fix for when no single width left aligned component is present

--- a/src/core/less/core/component.less
+++ b/src/core/less/core/component.less
@@ -24,10 +24,13 @@
     }
 
     &.is-right {
+      margin-left: auto;
       padding-left: 1%;
       width: 50%;
 
       .dir-rtl & {
+        margin-left: inherit;
+        margin-right: auto;
         padding-left: inherit;
         padding-right: 1%;
       }
